Ensure link tooltip is readable in inverted sections
REDMINE-19885

--- a/entry_types/scrolled/package/src/frontend/inlineEditing/EditableText/index.module.css
+++ b/entry_types/scrolled/package/src/frontend/inlineEditing/EditableText/index.module.css
@@ -22,6 +22,7 @@
 
 .linkTooltip {
   background-color: #222;
+  color: #fff;
   border-radius: 4px;
   font-family: Helvetica, Arial, "Sans-Serif";
   font-size: 13px;
